--- a/css/style.css
+++ b/css/style.css
@@ -233,11 +233,67 @@ header .form:hover{
 /* End Header  */
 /* Start Landing */
 .landing{
-    background-image:url(../images/landing.jpg);
-    background-size:cover;
     min-height:100vh;
-    position:relative
+    position:relative;   
 }
+.landing .slider-container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    overflow: hidden;
+
+}
+.landing .slider-container img{
+    position: absolute;
+    width:100%;
+    height: 100%;
+    object-fit:cover;
+    transition: 1s;
+}
+.landing .slider-container img:not(.active){
+    top: 0;
+    left: -100%;
+}
+@media(min-width:992px){
+    .landing .slider-container img{
+        height: auto;
+    }
+}
+/* Animation slider (Add it dynamically with js) */
+@keyframes next1 {
+    from{
+        left: 0;
+    }
+    to{
+        left: -100%;
+    } 
+}
+@keyframes next2 {
+    from{
+        left: 100%;
+    }
+    to{
+        left: 0%;
+    } 
+}
+@keyframes prev1 {
+    from{
+        left: 0;
+    }
+    to{
+        left: 100%;
+    } 
+}
+@keyframes prev2 {
+    from{
+        left: -100%;
+    }
+    to{
+        left: 0%;
+    } 
+}
+
 .landing .overlay{
     width: 100%;
     height: 100%;
@@ -286,8 +342,21 @@ header .form:hover{
     width: 100%;
     padding:20px
 }
+.landing  button{
+    padding: 20px 10px;
+    background-color: transparent;
+    border: none;
+    color: white;
+    cursor: pointer;   
+}
+.landing button:hover{
+    border-radius: 6px;
+    background-color: #ede6d6;
+    color: #222;
+}
+
 .landing .icon i{
-    font-size: 20px
+    font-size: 30px;
 }
 .landing .bullets{
     display: flex;
@@ -301,7 +370,8 @@ header .form:hover{
     height: 22px;
     border: 1px solid white;
     border-radius: 50%;
-    margin-left: 10px 
+    margin-left: 10px;
+    transition: background-color 1s ease; 
 
 }
 .landing .bullets li.active{
@@ -446,7 +516,6 @@ header .form:hover{
     flex-wrap: wrap;
     margin-top: 60px;
 }
-
 @media (min-width:768px){
     .portfolio .portfolio-content .box{
         flex-basis: 50%;
